# hobot_tts

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
include/hobot_tts/: hobot_tts.h
include/utils/: alsa_device.h  utils.h
src/: hobot_tts.cpp  main.cpp
src/utils/: alsa_device.cpp
wetts/include/: tts_api.h
